# diff_drive_motion_planning

./: .gitignore  README.md  launch_demo.sh  obstacle_planning.md
src/motion_planner_core/: setup.py
src/motion_planner_core/motion_planner_core/: controller.py  feedforward_controller.py  path_planner.py  path_smoother.py  pid_controller.py  pipeline.py  pure_pursuit.py  simulation.py  trajectory_generator.py  types.py
src/motion_planner_core/motion_planner_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/motion_planner_service/: package.xml  setup.cfg  setup.py
src/motion_planner_service/assets/: obstacle.sdf.template
src/motion_planner_service/config/: trajectory_tracking.rviz  waypoints.yaml
src/motion_planner_service/launch/: motion_planner.launch.py
src/motion_planner_service/motion_planner_service/: controller_node.py  obstacle_node.py  planner_node.py  recorder_node.py
src/motion_planner_webclient/: README.md  index.html  serve.sh
src/trajectory_smoother/: package.xml  setup.cfg  setup.py
src/trajectory_smoother/config/: trajectory_tracking.rviz  waypoints.yaml
src/trajectory_smoother/launch/: trajectory_tracking.launch.py
src/trajectory_smoother/test/: test_path_smoother.py  test_potential_field.py  test_pure_pursuit.py  test_trajectory_generator.py
src/trajectory_smoother/trajectory_smoother/: data_recorder_node.py  obstacle_spawner_node.py  path_smoother_node.py  potential_field.py  pure_pursuit.py  pure_pursuit_node.py  simulation.py  trajectory_generator.py  trajectory_generator_node.py
(+12 files in other folders)
