<?xml version="1.0"?>
<package format="3">
  <name>motion_planner_service</name>
  <version>0.1.0</version>
  <description>ROS2 service layer for motion_planner_core</description>
  <maintainer email="kartikprakash3775@gmail.com">kartik</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
